# baller-connections

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  screenshot.mjs  tailwind.config.js  vite.config.js
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  graph.py  images.py  lazy_import.py  main.py  models.py  puzzles.py  scheduler.py  schema.sql  tm_client.py
backend/app/ingest/: __main__.py  pipeline.py
backend/app/ingest/config/: competitions.dev.yml  competitions.yml
backend/app/routers/: game.py  players.py
src/: App.jsx  index.css  main.jsx
src/api/: client.js
src/components/: BubbleBoard.jsx  ConnectionBadge.jsx  DifficultyPicker.jsx  ErrorState.jsx  GuessInput.jsx  Header.jsx  LoadingState.jsx  PlayerBubble.jsx  WinScreen.jsx
src/hooks/: useDebounce.js  useGame.js  usePhysics.js
