[project]
name = "baller-backend"
version = "0.1.0"
description = "Baller Connections game backend: teammate graph, puzzles, ingest"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic-settings>=2.4",
    "apscheduler>=3.10,<4",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
